delete unneeded stuff, fix spacing

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,24 +1,15 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
 body{
-
-  background: #9B88EF;
+  background: #00C2A2;
 }
-
-
 
 .jumbotron {
+  padding-top: 10px;
   background-color:#FFDC60;
-    // background-image: asset-url('game.png');
-    background-size: cover;
-    min-height: 450px;
-
-
-}
-
-.jumbotron h1 {
-
-  background-color:#45F0DF;
+  // this was left just incase we would want to add an image to the banner
+  // background-image: asset-url('');
+  background-size: cover;
+  min-height: 300px;
 }
